--- a/作业/第十一次作业/ToDoList/css/index.css
+++ b/作业/第十一次作业/ToDoList/css/index.css
@@ -45,7 +45,7 @@ span{
     padding: 0 5px;
     height: 20px;
     border-radius: 20px;
-    background: #E6E6EA;
+    background: #E6E6FA;
     line-height: 22px;
     text-align: center;
     color: #666;
@@ -69,7 +69,7 @@ p{
 li p input{
     top: 3px;
     left: 40px;
-    width: 70px;
+    width: 70%;
     height: 20px;
     line-height: 14px;
     text-indent: 5px;
@@ -106,6 +106,7 @@ li a{
     line-height: 14px;
     text-align: center;
     color: #fff;
+    font-weight: bold;
     font-size: 14px;
     cursor: pointer;
 }
@@ -122,15 +123,13 @@ footer a{
 
 @media screen and (max-device-width: 620px) {
     section{
-        width: 96%;
-        padding: 0 2%;
+        width:96%;
+        padding:0 2%;
     }
-
 }
-@media screen and(min-width: 620px) {
+@media screen and (min-width: 620px) {
     section{
-        width: 96%;
-        padding: 0 10px;
+        width:600px;
+        padding:0 10px;
     }
-
 }
