--- a/Python全栈开发中级/第六模块/第一章/03 wsgi模块/auto_test/templates/login.html
+++ b/Python全栈开发中级/第六模块/第一章/03 wsgi模块/auto_test/templates/login.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    <from action="http://127.0.0.1:8080/" method="post">
+    <form action="http://127.0.0.1:8080/auth" method="post">
         用户名<input type="text" name="user"><br>
         密码 <input type="password" name="pwd"><br>
         <input type="submit">
-    </from>
+    </form>
 
 </body>
 </html>
