--- a/Python全栈开发中级/第六模块/第一章/06 templates_demo/templates_demo/templates/index.html
+++ b/Python全栈开发中级/第六模块/第一章/06 templates_demo/templates_demo/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}
+<title>index</title>
+{% endblock %}
+{% block conn %}
+
     <h4>{{ s }}</h4>
     <h4>列表：{{ l.0 }}</h4>
     <h4>列表：{{ l.2 }}</h4>
@@ -24,7 +24,49 @@
 
     <p>for循环标签</p>
     {% for person in person_list %}
-        <p>{{ person.name }}</p>
+        <p>{{ forloop.counter0 }}{{ person.name }}, {{ person.age }}</p>
+
+    {% empty %}
+        <p>sorry, no person here</p>
     {% endfor %}
-</body>
-</html>
+
+    <hr>
+    {% if user %}
+        <p>
+            <a href="">hi {{ user }}</a>
+            <a href="">注销</a>
+        </p>
+    {% else %}
+        <p>
+            <a href="">登录</a>
+            <a href="">注册</a>
+        </p>
+    {% endif %}
+
+    <hr>
+    {% with person_list.1.name as n %}
+        {{ n }}
+        {{ n }}
+        {{ n }}
+        {{ n }}
+    {% endwith %}
+
+    <hr>
+    <h4>自定义过滤器，标签</h4>
+    {% load my_tag_filter %}
+    <p>{{ i|multi_fliter:20 }}</p>
+    {#<p>{% multi_tag 7 9 6 %}</p>#}
+
+
+    {% if i|multi_fliter:10 > 100 %}
+        <p>100</p>
+    {% else %}
+        <p>{{ i }}</p>
+
+    {#{% if multi_tag i 20 > 100 %}#}
+    {#<p>100</p>#}
+    {#{% else %}#}
+    {#<p>{{ i }}</p>#}
+    {#{% endif %}#}
+
+{% endblock %}}
