--- a/Python全栈开发中级/第六模块/第一章/08 bookms/templates/base.html
+++ b/Python全栈开发中级/第六模块/第一章/08 bookms/templates/base.html
@@ -50,40 +50,12 @@
                 <li><a href="/set_pwd">修改密码</a> </li>
                 <li><a href="">个人中心</a> </li>
             </ul>
+            <form class="mavbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
         </div>
     </div>
 
 </nav>
-<h3>添加书籍</h3>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-off-3">
-            <form action="" method="post">
-                {% csrf_token %}
-                <div>
-                    <label for="">书籍名称</label>
-                    <input type="text" class="form-control" name="title">
-                </div>
-                <div>
-                    <label for="">作者</label>
-                    <input type="text" class="form-control" name="author">
-                </div>
-                <div>
-                    <label for="">价格</label>
-                    <input type="text" class="form-control" name="price">
-                </div>
-                <div>
-                    <label for="">出版日期</label>
-                    <input type="date" class="form-control" name="date">
-                </div>
-                <div>
-                    <label for="">出版社</label>
-                    <input type="text" class="form-control" name="publish">
-                </div>
-                <input type="submit" class="btn btn-sucess pull-right">
-            </form>
-        </div>
-    </div>
-</div>
 </body>
 </html>
