--- a/Python全栈开发中级/第六模块/第一章/08 bookms/templates/books.html
+++ b/Python全栈开发中级/第六模块/第一章/08 bookms/templates/books.html
@@ -14,13 +14,34 @@
         }
     </style>
 </head>
-<body>
-<h3>查看书籍</h3>
+<body role="document">
+<!--导航条-->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/addbook" class="navbar-brand">添加书籍</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                 <li><a href="#">{{user}}</a> </li>
+            <li><a href="/logout/">退出</a> </li>
+            </ul>
+        </div>
+    </div>
+
+</nav>
 
 <div class="container">
-    <div class="row">
+    <div class="row" style="padding-top: 80px;">
         <div class="col-md-6 col-md-offset-3">
-            <a href="/addbook" class="btn btn-primary">添加书籍</a>
+            <h3>书籍列表</h3>
+
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
