--- a/Python全栈开发中级/第六模块/第一章/08 bookms/templates/index.html
+++ b/Python全栈开发中级/第六模块/第一章/08 bookms/templates/index.html
@@ -10,11 +10,11 @@
             margin-top: 100px;
         }
         .btn {
-            width: 300px;
+            width: 100px;
         }
         .c2,h6 {
 
-            margin-left: 80px;
+            margin-left: 100px;
         }
         .reg {
             text-decoration: none;
@@ -45,13 +45,14 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <input type="submit" class="btn btn-primary" value="登录">
+                        <a href="/reg/" class="reg"><button type="button" class="btn btn-success c2">注册</button> </a>
 
                     </div>
 
                  </div>
 
             </form>
-            <a href="/reg/" class="reg"><button type="submit" class="btn btn-success c2">注册</button> </a>
+
 
 
 
