--- a/Python全栈开发中级/第六模块/第一章/08 bookms/templates/reg.html
+++ b/Python全栈开发中级/第六模块/第一章/08 bookms/templates/reg.html
@@ -47,7 +47,7 @@
                 </div>
                 <h6 style="color: red">{{s1}}</h6>
                 <input type="submit" class="c2" value="提交">
-                <input type="submit" class="c3" value="取消">
+                <a href="/login/"><input type="button" class="c3" value="返回"></a>
 
             </form>
         </div>
