--- a/Python全栈开发中级/第六模块/第一章/08 bookms/templates/books.html
+++ b/Python全栈开发中级/第六模块/第一章/08 bookms/templates/books.html
@@ -1,77 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>图书列表</title>
-    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.min.css">
-    <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
-    <style>
-        .container{
-            margin-top: 100px;
-        }
-        .btn{
-            margin-top: 10px;
-        }
-    </style>
-</head>
-<body role="document">
-<!--导航条-->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/addbook" class="navbar-brand">添加书籍</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                 <li><a href="#">{{user}}</a> </li>
-            <li><a href="/logout/">退出</a> </li>
-            </ul>
-        </div>
-    </div>
+{% extends "base.html" %}
+{% block add %}
+    <!--<h1 class="pull-right">欢迎{{request.user}}登录</h1>-->
 
-</nav>
+    <div class="container">
+        <div class="row" style="padding-top: 80px;">
+            <div class="col-md-6 col-md-offset-3">
+                <a href="/addbook/">
+                    <button class="btn btn-primary add">添加图书</button>
+                    </a>
 
-<div class="container">
-    <div class="row" style="padding-top: 80px;">
-        <div class="col-md-6 col-md-offset-3">
-            <h3>书籍列表</h3>
-
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>书籍名称</th>
-                        <th>作者</th>
-                        <th>价格(元)</th>
-                        <th>出版社</th>
-                        <th>出版日期</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for book in book_list %}
+                <table class="table table-striped table-bordered">
+                    <thead>
                         <tr>
-                            <td>{{ book.title }}</td>
-                            <td>{{ book.author}}</td>
-                            <td>{{ book.price }}</td>
-                            <td>{{ book.publish }}</td>
-                            <td>{{ book.publishData|date:'Y-m-d' }}</td>
-                            <td>
-                                <a href="/books/{{ book.pk }}/delete"><button class="btn btn-danger">删除</button></a>
-                                <a href="/books/{{ book.pk }}/change"><button class="btn btn-info">编辑</button></a>
-                            </td>
+                            <th>编号</th>
+                            <th>书籍名称</th>
+                            <th>作者</th>
+                            <th>价格(元)</th>
+                            <th>出版社</th>
+                            <th>出版日期</th>
+                            <th>操作</th>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        {% for book in book_list %}
+                            <tr>
+                                <td>{{book.id}}</td>
+                                <td>{{ book.title }}</td>
+                                <td>{{ book.author}}</td>
+                                <td>{{ book.price }}</td>
+                                <td>{{ book.publish }}</td>
+                                <td>{{ book.publishData|date:'Y-m-d' }}</td>
+                                <td>
+                                    <a href="/books/{{ book.pk }}/delete"><button class="btn btn-danger">删除</button></a>
+                                    <a href="/books/{{ book.pk }}/change"><button class="btn btn-info">编辑</button></a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
