--- a/Python全栈开发中级/第六模块/第一章/08 bookms/templates/addbook.html
+++ b/Python全栈开发中级/第六模块/第一章/08 bookms/templates/addbook.html
@@ -1,69 +1,51 @@
-{% extends "base.html" %}
-{% block style %}
-
-    {{block.super}}
-    .form-horzontal {
-            margin-top:100px;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>添加图书</title>
+    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.min.css">
+    <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .container{
+            margin-top: 100px;
         }
-    .panel {
-        margin-top: 30px;
-        width:700px;
-        height: 500px;
-        margin-left: 300px;
-    }
-{% endblock %}
-{% block add %}
-    <div class="panel panel-primary">
-        <div class="panel-heading">添加书籍</div>
-        <div class="panel-body">
-            <form class="form-horizontal" action="/addbook/" method="post">
+        .btn{
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+ 
+<h3>添加书籍</h3>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-off-3">
+            <form action="" method="post">
                 {% csrf_token %}
-                <div class="form-group">
-                    <label for="title" class="col-sm-2 control-label">书籍名称:</label>
-                    <div class="col-sm-10">
-                        <input type="text" id="title" name="title">
-                    </div>
+                <div>
+                    <label for="">书籍名称</label>
+                    <input type="text" class="form-control" name="title">
                 </div>
-                <div class="form-group">
-                    <label for="author" class="col-sm-2 control-label">作者:</label>
-                    <div class="col-sm-10">
-                        <select name="author" id="author" multiple>
-                            {% for author_obj in authorlist %}
-                                <option value="{{author_obj.id}}">{{author_obj.name}}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
+                <div>
+                    <label for="">作者</label>
+                    <input type="text" class="form-control" name="author">
                 </div>
-                <div class="form-group">
-                    <label for="price" class="col-sm-2 control-label">价格:</label>
-                    <div class="col-sm-10">
-                        <input type="text" id="price" name="price">
-                    </div>
+                <div>
+                    <label for="">价格</label>
+                    <input type="text" class="form-control" name="price">
                 </div>
-                <div class="form-group">
-                    <label for="date" class="col-sm-2 control-label">出版日期:</label>
-                    <div class="col-sm-10">
-                        <input type="date" id="date" name="date">
-                    </div>
+                <div>
+                    <label for="">出版日期</label>
+                    <input type="date" class="form-control" name="date">
                 </div>
-                <div class="form-group">
-                    <label for="publish" class="col-sm-2 control-label">出版社:</label>
-                    <div class="col-sm-10">
-                        <select name="publish" id="publish">
-                            {% for pub_obj in publist %}
-                            <option value="{{pub_obj.id}}">{{pub_obj.name}}</option>
-                            {% endfor %}
-                        </select>
-
-                    </div>
+                <div>
+                    <label for="">出版社</label>
+                    <input type="text" class="form-control" name="publish">
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-10 col-md-offset-2">
-                        <input type="submit" class="btn btn-sucess pull-right">
-                    </div>
-                </div>
-
+                <input type="submit" class="btn btn-sucess pull-right">
             </form>
         </div>
     </div>
-{% endblock %}
+</div>
+</body>
+</html>
