--- a/Python全栈开发中级/第六模块/第一章/10 bookms2/templates/addbook.html
+++ b/Python全栈开发中级/第六模块/第一章/10 bookms2/templates/addbook.html
@@ -11,6 +11,9 @@
         height: 500px;
         margin-left: 300px;
     }
+    h6 {
+        margin-left:200px;
+    }
 {% endblock %}
 {% block add %}
     <div class="panel panel-primary">
@@ -24,12 +27,14 @@
                         <input type="text" id="title" name="title">
                     </div>
                 </div>
+                <h6 style="color: red">{{s}}</h6>
+                <h6 style="color: red">{{s1}}</h6>
                 <div class="form-group">
-                    <label for="author" class="col-sm-2 control-label">作者:</label>
+                    <label for="authors_id_list" class="col-sm-2 control-label">作者:</label>
                     <div class="col-sm-10">
-                        <select name="author" id="author" multiple>
-                            {% for author_obj in authorlist %}
-                                <option value="{{author_obj.id}}">{{author_obj.name}}</option>
+                        <select name="authors_id_list" id="authors_id_list" multiple>
+                            {% for author_obj in author_list %}
+                                <option value="{{author_obj.pk}}">{{author_obj.name}}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -47,11 +52,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="publish" class="col-sm-2 control-label">出版社:</label>
+                    <label for="publish_id" class="col-sm-2 control-label">出版社:</label>
                     <div class="col-sm-10">
-                        <select name="publish" id="publish">
-                            {% for pub_obj in publist %}
-                            <option value="{{pub_obj.id}}">{{pub_obj.name}}</option>
+                        <select name="publish_id" id="publish_id" class="form-control">
+                            {% for pub_obj in publish_list %}
+                            <option value="{{pub_obj.pk}}">{{pub_obj.name}}</option>
                             {% endfor %}
                         </select>
 
@@ -59,7 +64,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-10 col-md-offset-2">
-                        <input type="submit" class="btn btn-sucess pull-right">
+                        <input type="submit" class="btn btn-primary pull-right">
                     </div>
                 </div>
 
