--- a/Python全栈开发中级/第六模块/第一章/10 bookms2/templates/index.html
+++ b/Python全栈开发中级/第六模块/第一章/10 bookms2/templates/index.html
@@ -35,6 +35,7 @@
                         <input type="text" class="form-control" id="username" placeholder="输入用户名" name="username">
                     </div>
                 </div>
+                <h6 style="color: red">{{s1}}</h6>
                 <div class="form-group">
                     <label for="password" class="col-sm-2 control-label">密 码</label>
                     <div class="col-sm-10">
